--- a/referral/templates/referral/home.html
+++ b/referral/templates/referral/home.html
@@ -24,24 +24,13 @@
    
     <!-- header Section start -->
     <header>
-
-        <!-- <div class="container">
-
-            <div class=" row inner_content">
-                <div class="col-12">
-                    <div class="brand_logo">
-                        <img src="assets/img/logo.png" alt="logo">
-                    </div>
-                </div>
-            </div>
-        </div> -->
-        <nav class="navnew navbar navbar-expand-lg">
+        <nav class="navnew mx-5 navbar navbar-expand-lg">
           <div class="container">
             <a class="navbar-brand brand_logo" href="#">
               <img src="{% static 'referral/assets/img/logo.png' %}" alt="logo">
             </a>
           </div>
-          </nav>
+        </nav>
     </header>
     <!-- header Section end -->
    
@@ -50,11 +39,21 @@
         <div class="container">
            <div class="bnnr_content">
                <h1 class="title">Exclusive</h1>
-                <h3 class="sub_title">Refer & Earn Program for <br> Vihav's client</h3>
+               <h3 class="sub_title">Refer & Earn Program <br> <span>for vihav's clients</span></h3>
                 <ul class="join_sign d-flex">
                     <li><a href="{% url 'signup' %}" class="vihav_btn">Join Now</a></li>
                     <li><a href="{% url 'login' %}" class="vihav_btn">Log In</a></li>
                 </ul>
+            <!-- stroke Text -->
+            <div class="stock-text1">
+                <h2>pillar of </h2>
+                <h2>pillar of </h2>
+            </div>
+            <div class="stock-text">
+                <h2>excellence</h2>
+                <h2>excellence</h2>
+            </div>
+
            </div>
         </div>
     </section>
