--- a/referral/templates/referral/home.html
+++ b/referral/templates/referral/home.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>Vihav</title>
+    <link rel="shortcut icon" type="image/x-icon" href="{% static 'referral/assets/img/favicon.ico' %}">
 
     <link rel="stylesheet" type="text/css" href="{% static 'referral/assets/css/all.min.css' %}">
     <!-- fontawesome -->
@@ -22,7 +23,7 @@
 </head>
 <body>
    
-    <!-- header Section start -->
+    <!-- header Section start 
     <header>
         <nav class="navnew mx-5 navbar navbar-expand-lg">
           <div class="container">
@@ -32,17 +33,18 @@
           </div>
         </nav>
     </header>
-    <!-- header Section end -->
+     header Section end -->
    
     <!-- banner Section start -->
     <section id="banner">
         <div class="container">
            <div class="bnnr_content">
+               <img src="{% static 'referral/assets/img/logot.png' %}" alt="logo">
                <h1 class="title">Exclusive</h1>
                <h3 class="sub_title">Refer & Earn Program <br> <span>for vihav's clients</span></h3>
                 <ul class="join_sign d-flex">
                     <li><a href="{% url 'signup' %}" class="vihav_btn">Join Now</a></li>
-                    <li><a href="{% url 'login' %}" class="vihav_btn">Log In</a></li>
+                    <li><a href="{% url 'login' %}" class="vihav_btn2">Log In</a></li>
                 </ul>
             <!-- stroke Text -->
             <div class="stock-text1">
@@ -59,7 +61,7 @@
     </section>
     <!-- banner Section end -->
    
-    <!-- reward Section start -->
+    <!-- reward Section start 
     <section id="reward"  class="sec-pad">
         <div class="container">
            <div class="row">
@@ -85,16 +87,43 @@
 
         </div>
     </section>
-    <!-- reward Section end -->
+     reward Section end -->
+
+
+
+
+
+    <!-- reward Section start -->
+    <section id="reward"  class="sec-pad">
+        <div class="container">
+           <div class="row">
+               <div class="col-12 text-center">
+                <div class="reward_content">
+                    <h3 class="slogan_txt">Help your Friend & Family <br> to find their
+                        dream Home with VIHAV <br> & <br>Earn Rewards </h3>
+
+                </div>
+               </div>
+               <div class="col-12 text-center">
+                   <div class="reward_content bottom px-5">
+                    <h3 class="slogan_txt2">
+                        when your Friend book Property at Vihav’s 
+                        with your reference <br> You get 6% of amount direct to bank
+                        your account.
+                       </h3>
+                   </div>
+               </div>
+           </div>
+
+        </div>
     <div class="design_bar"></div>
+    </section>
+    <!-- reward Section end -->
+
+
     <!-- works Section start -->
     <section id="work"  class="sec-pad">
-        <div class="container">
-            <div class="row">
-                <div class="col-12">
-                    <h2 class="section_title">How It Works?</h2>
-                </div>
-            </div>
+        <div class="container" style="width: 60%">
             <div class="row process">
 
                 <div class="col-12">
