--- a/referral/templates/referral/home.html
+++ b/referral/templates/referral/home.html
@@ -107,10 +107,8 @@
                <div class="col-12 text-center">
                    <div class="reward_content bottom px-5">
                     <h3 class="slogan_txt2">
-                        when your Friend book Property at Vihav’s 
-                        with your reference <br> You get 6% of amount direct to bank
-                        your account.
-                       </h3>
+                        When your friend books a property at Vihav with your reference, <br> you get a direct REWARD of 6% of the amount
+                    </h3>
                    </div>
                </div>
            </div>
@@ -123,18 +121,17 @@
 
     <!-- works Section start -->
     <section id="work"  class="sec-pad">
-        <div class="container" style="width: 60%">
+        <div class="container" style="width: 70%">
             <div class="row process">
 
                 <div class="col-12">
                     <div class="row">
                         <div class="col-md-6 order-2 order-md-0 d-center">
                             <div class="process_system">
-                                <h2 class="title">1. Refer Vihav to your Friend</h2>
+                                <h4 class="step">STEP 1</h4>
+                                <h2 class="title"> Refer Vihav to your friends and family</h2>
                                 <p>
-                                    when your Friend book Property at Vihav’s  <br>
-                                    with your reference, You get 6% of amount direct to <br>
-                                    your account.
+                                    Recommend Vihav to your friends and family by letting them know about the benefits & quality they'd get at our projects.
                                 </p>
                             </div>
                         </div>
@@ -145,17 +142,14 @@
                 </div>
                 <div class="col-12">
                     <div class="row">
-                        <div class="col-md-6 d-start">
-                            <img src="{% static 'referral/assets/img/works/work-2.png' %}" alt="" class="img-fluid">
+                        <div class="col-md-6 d-x">
+                            <img src="{% static 'referral/assets/img/works/work-1.png' %}" alt="" class="img-fluid">
                         </div>
                         <div class="col-md-6 d-center">
                             <div class="process_system">
-                                <h2 class="title">2. Your Friend give your
-                                    Refference when Book</h2>
-                                    <p>
-                                        when your Friend book Property at Vihav’s  <br>
-                                        with your reference, You get 6% of amount direct to <br>
-                                        your account.
+                                <h4 class="step">STEP 2</h4>
+                                <h2 class="title">Your friend will let us know about the reference while booking</h2>
+                                    <p>When the people who have got recommendations of Vihav comes to us for booking their dream home, they'll tell us about your reference.
                                     </p>
                             </div>
                         </div>
@@ -165,19 +159,16 @@
                     <div class="row">
                         <div class="col-md-6 order-2 order-md-0 d-center">
                             <div class="process_system">
+                                <h4 class="step">STEP 3</h4>
                                 <h2 class="title">
-                                    3. Your Reward transfer to
-                                    your Bank Account
+                                     Your Reward will be transferred to your account
                                 </h2>
-                                <p>
-                                    when your Friend book Property at Vihav’s  <br>
-                                    with your reference, You get 6% of amount direct to <br>
-                                    your account.
+                                <p>After getting your reference, we will directly transfer a reward amount of 6% of the amount in your account for recommending our projects to them.
                                 </p>
                             </div>
                         </div>
                         <div class="col-md-6 order-1 order-md-0 d-end">
-                            <img src="{% static 'referral/assets/img/works/work-1.png' %}" alt="" class="img-fluid">
+                            <img src="{% static 'referral/assets/img/works/work-2.png' %}" alt="" class="img-fluid">
                         </div>
                     </div>
                 </div>
