--- a/referral/templates/referral/base.html
+++ b/referral/templates/referral/base.html
@@ -18,7 +18,12 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-	 <title>vihav</title>
+    {% if title %}
+     <title>vihav-{{ title }}</title>
+    {% else %}
+     <title>vihav</title>
+    {% endif %}
+	 
 
   </head>
   <body>
