--- a/users/templates/users/userbase.html
+++ b/users/templates/users/userbase.html
@@ -14,7 +14,7 @@
   <meta name="author" content="">
 
   <title>Vihav</title>
-
+  <link rel="shortcut icon" type="image/x-icon" href="{% static 'referral/assets/img/favicon.ico' %}">
 
   <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
 
