--- a/referral/static/referral/css/sb-admin-2.css
+++ b/referral/static/referral/css/sb-admin-2.css
@@ -9886,8 +9886,8 @@ a:focus {
 }
 
 .bg-gradient-secondary {
-  background-color: #858796;
-  background-image: linear-gradient(180deg, #858796 10%, #60616f 100%);
+  background-color: #4e73df;
+  background-image: linear-gradient(180deg, #4e73df 10%, #224abe 100%);
   background-size: cover;
 }
 
